--- a/stylechannel.css
+++ b/stylechannel.css
@@ -260,7 +260,7 @@
         .stream-wrapper {
             position: relative;
             width: 100%;
-            padding-bottom: 46%; /* 16:9 Aspect Ratio */
+            padding-bottom: 46%; 
             height: 0;
             overflow: hidden;
             border-radius: 12px;
